[package]
name = "export-strapi-to-file"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
calamine = "0.19"  # For Excel Operations
pdf_writer = "0.7" # For PDF generation
