[package]
name = "export-strapi-to-file"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
calamine = "0.26"  # For Excel Operations
pdf-writer = "0.12.0" # For PDF generation
