[package]
name = "export-strapi-to-file"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
calamine = "0.26"  # For Excel Reading
rust_xlsxwriter = "0.79.0" # For Excel Writing
pdf-writer = "0.12.0" # For PDF generation
Inflector = "0.11"
